@@ -33,7 +33,7 @@ generator-mode-tooltip-header=Generator Mode
 generator-mode-tooltip-body=Convert trade outputs to coin purchases (low-efficiency, irreversible)
 generator-mode-confirmation-tooltip=[color=red]Turn these trades into generator trades?[.color]\nThis cannot be undone.
 delete-core-tooltip-header=Deletion
-delete-core-tooltip-body=Delete this hex core.
+delete-core-tooltip-body=Delete this hex core. Note: Any strongbox in this same hex will also be removed.
 delete-core-confirmation=DELETE HEX CORE?
 delete-strongbox-tooltip-header=Strongbox Removal
 delete-strongbox-tooltip-body=Delete all strongboxes in this hex permanently.
